# audioconvert

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
miniprogram/: CLAUDE.md  manifest.json  package.json  pages.json  tsconfig.json
miniprogram/src/: App.vue  env.d.ts
miniprogram/src/data/: districts.ts  itinerary.ts  routes.ts  ugc.ts
miniprogram/src/pages/itinerary/: builder.vue
miniprogram/src/pages/ugc/: publish.vue
scripts/: download-ffmpeg.ps1  download-ffmpeg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  ffmpeg.rs  lib.rs  main.rs  models.rs  settings.rs
src-tauri/src/commands/: convert.rs  file.rs  mod.rs  plugin.rs  settings.rs
src/components/ui/: FirstRunDialog.tsx  PluginCenter.tsx  SettingsPanel.tsx
src/components/wizard/: ResultPage.tsx  Step1Import.tsx  Step2Settings.tsx  Step3Convert.tsx  WizardShell.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: formats.ts  ipc.ts
src/styles/: global.css
src/types/: index.ts
