[package]
name = "audioconvert"
version = "1.0.0"
description = "A local audio format converter"
authors = ["AudioConvert Contributors"]
license = "MIT"
repository = "https://github.com/your-username/audioconvert"
edition = "2021"
rust-version = "1.77"

[lib]
name = "audioconvert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog    = "2"
tauri-plugin-fs        = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell     = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4"] }
dirs        = "5"
walkdir     = "2"
regex       = "1"
once_cell   = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
